syntax = "proto3";

option csharp_namespace = "Proto.Command.NoteTypes";
import "DTO/trace_data.proto";

service NoteTypeProtoCommandService {
  rpc ChangeNoteTypeColor (ChangeNoteTypeColorCommandProto) returns (CommandResponse);
  rpc ChangeNoteTypeName (ChangeNoteTypeNameCommandProto) returns (CommandResponse);
  rpc CreateNoteType (CreateNoteTypeCommandProto) returns (CommandResponse);
}

message ChangeNoteTypeColorCommandProto {
  string noteTypeId = 1;
  string color = 2;
  TraceDataProto traceData = 3;
}

message ChangeNoteTypeNameCommandProto {
  string noteTypeId = 1;
  string name = 2;
  TraceDataProto traceData = 3;
}

message CreateNoteTypeCommandProto {
  string noteTypeId = 1;
  string name = 2;
  string color = 3;
  TraceDataProto traceData = 4;
}

message CommandResponse {
  bool success = 1;
}
